Some Adjustment Done

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malaysia Experience</title>
+    <title>Malaysia Experience | Best Deals & Discounts</title>
+    <meta name="description" content="Experience the longest range mono cable car recorded in Malaysia Book of Records. | Travel in a amazing journey across the 550 million years old of thick forests at the South East Asia | Embark in a whole different world of Sky Dome which offers 360 degreesof 3D Image projection that can easily cover your entire view. | Skycab Langkawi offers a thrilling cable car ride up Machinchang mountain, providingstunning views of the islands. Visitors can explore the Middle and Top Stations and walk on the SkyBridge for breath taking vistas. It's a must-visit for an unforgettable adventure on Langkawi Island. | ✓Best Prices ✓Online Reservations ✓Ticket Discounts">
   </head>
   <body>
     <div id="root"></div>
